Updated Devlogs.scss to avoid overlapping posts in Safari browser.
Added 'grid-auto-rows: 1fr' to the .post classname in the css to prevent any overlap between the grid layouts of each devlog post in the Safari browser.

--- a/src/pages/Devlogs.scss
+++ b/src/pages/Devlogs.scss
@@ -34,6 +34,7 @@
                 display: grid;
                 grid-template-areas: 'date post';
                 grid-auto-columns: 1fr 2fr;
+                grid-auto-rows: 1fr;    // This prevents the rows from overlapping in Safari.
                 margin-inline: auto;
                 gap: 2rem;
                 width: 70%;
